Implement more APIs for module RPGs, improve test coverage
