# Modules/Avatar/app/Http/Resources/CharacterResource.php
@@ -2,11 +2,11 @@
 
 declare(strict_types=1);
 
-namespace Modules\Dnd5e\Http\Resources;
+namespace Modules\Avatar\Http\Resources;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
-use Modules\Dnd5e\Models\Character;
+use Modules\Avatar\Models\Character;
 
 /**
  * @mixin Character
@@ -19,9 +19,21 @@ class CharacterResource extends JsonResource
     public function toArray(Request $request): array
     {
         return [
-            'id' => $this->id,
             'name' => $this->name,
-            'campaign_id' => $this->campaign_id,
+            'appearance' => $this->appearance,
+            'background' => ucfirst($this->background->value),
+            'creativity' => $this->creativity,
+            //'era' => $this->era,
+            'fatigue' => $this->fatigue,
+            'focus' => $this->focus,
+            'harmony' => $this->harmony,
+            'history' => $this->history,
+            'passion' => $this->passion,
+            'campaign_id' => $this->when(
+                null !== $this->campaign_id,
+                $this->campaign_id
+            ),
+            'id' => $this->id,
             'owner' => [
                 // @phpstan-ignore-next-line
                 'id' => $this->user()->id,
@@ -30,7 +42,7 @@ class CharacterResource extends JsonResource
             ],
             'system' => $this->system,
             'links' => [
-                'self' => route('dnd5e.characters.show', $this->id),
+                'self' => route('avatar.characters.show', $this->id),
                 'campaign' => $this->when(
                     null !== $this->campaign_id,
                     null !== $this->campaign_id
