# Modules/Transformers/app/Http/Controllers/CharactersController.php
@@ -8,17 +8,21 @@ use App\Http\Controllers\Controller;
 use App\Models\User;
 use Illuminate\Http\RedirectResponse;
 use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
 use Illuminate\Http\Response;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\View\View;
 use Modules\Transformers\Http\Requests\BaseRequest;
 use Modules\Transformers\Http\Requests\ProgrammingRequest;
 use Modules\Transformers\Http\Requests\StatisticsRequest;
+use Modules\Transformers\Http\Resources\CharacterResource;
 use Modules\Transformers\Models\Character;
 use Modules\Transformers\Models\PartialCharacter;
 use Modules\Transformers\Models\Programming;
 
-/** @psalm-suppress UnusedClass */
+/**
+ * @psalm-suppress UnusedClass
+ */
 class CharactersController extends Controller
 {
     protected const SESSION_KEY = 'transformers-partial';
@@ -237,8 +241,30 @@ class CharactersController extends Controller
     }
 
     /**
-     * View a character's sheet.
+     * @psalm-suppress PossiblyUnusedMethod
      */
+    public function index(): JsonResource
+    {
+        return CharacterResource::collection(
+            // @phpstan-ignore-next-line
+            Character::where('owner', Auth::user()->email)->get()
+        );
+    }
+
+    /**
+     * @psalm-suppress PossiblyUnusedMethod
+     */
+    public function show(string $identifier): JsonResource
+    {
+        // @phpstan-ignore-next-line
+        $email = Auth::user()->email;
+        return new CharacterResource(
+            Character::where('_id', $identifier)
+                ->where('owner', $email)
+                ->firstOrFail()
+        );
+    }
+
     public function view(Character $character): View
     {
         $user = Auth::user();
