# public/openapi.yml
@@ -9,7 +9,7 @@ info:
   license:
     name: MIT License
     url: https://mit-license.org/
-  version: 1.7.0
+  version: 1.8.0
 externalDocs:
   description: Find out more about Commlink
   url: https://commlink.digitaldarkness.com/about
@@ -19,6 +19,8 @@ servers:
   - url: https://commlink.digitaldarkness.com/api
   - url: https://commlink-dev.digitaldarkness.com/api
 tags:
+  - name: blistercritters
+    description: Blister Critters RPG
   - name: campaign
     description: Information for gamemasters
   - name: character
@@ -38,11 +40,38 @@ tags:
   - name: meta
     description: Information about the service itself
   - name: shadowrun
-    description: Shadowrun RPG
+    description: Shadowrun RP
+  - name: startrekadventures
+    description: Star Trek Adventures RPG
+  - name: transformers
+    description: Old Transformers RPG
   - name: user
     description: Operations about users
 
 paths:
+  /blistercritters/characters:
+    get:
+      summary: Blister Critters RPG characters
+      operationId: blistercritters-characters-index
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                properties:
+                  data:
+                    items:
+                      $ref: '#/components/schemas/BlistercrittersCharacter'
+                    type: array
+                  links:
+                    $ref: '#/components/schemas/Links'
+                required:
+                  - data
+                  - links
+                type: object
+          description: Collection of the user's Blister Critters characters.
+      tags:
+        - blistercritters
   /campaigns:
     get:
       summary: Return all campaigns for the user
@@ -2417,6 +2446,52 @@ paths:
           description: Collection of Shadowrun 5E weapons.
       tags:
         - shadowrun
+  /startrekadventures/characters:
+    get:
+      summary: Star Trek Adventures RPG characters
+      operationId: startrekadventures-characters-index
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                properties:
+                  data:
+                    items:
+                      $ref: '#/components/schemas/StartrekadventuresCharacter'
+                    type: array
+                  links:
+                    $ref: '#/components/schemas/Links'
+                required:
+                  - data
+                  - links
+                type: object
+          description: Collection of the user's Star Trek Adventures characters.
+      tags:
+        - startrekadventures
+  /transformers/characters:
+    get:
+      summary: Transformers RPG characters
+      operationId: transformers-characters-index
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                properties:
+                  data:
+                    items:
+                      $ref: '#/components/schemas/TransformersCharacter'
+                    type: array
+                  links:
+                    $ref: '#/components/schemas/Links'
+                required:
+                  - data
+                  - links
+                type: object
+          description: Collection of the user's Transformer characters.
+      tags:
+        - transformers
   /users:
     get:
       summary: All users
@@ -2719,6 +2794,43 @@ components:
                 type: object
             type: object
   schemas:
+    BlistercrittersCharacter:
+      example:
+        id: '667cda3b3dc4b0ecfa014d62'
+        name: 'Philz McDillz'
+        instinct: 10
+        noggin: 8
+        scrap: 8
+        scurry: 6
+        vibe: 6
+        owner: 'omni@digitaldarkness.com'
+        system: 'blistercritters'
+        links:
+          self: 'https://commlink-dev.digitaldarkness.com/api/blistercritters/characters/667cda3b3dc4b0ecfa014d62'
+
+      allOf:
+        - $ref: '#/components/schemas/Character'
+        - properties:
+            instinct:
+              type: integer
+            name:
+              type: string
+            noggin:
+              type: integer
+            scrap:
+              type: integer
+            scurry:
+              type: integer
+            vibe:
+              type: integer
+          required:
+            - instinct
+            - name
+            - noggin
+            - scrap
+            - scurry
+            - vibe
+          type: object
     Campaign:
       properties:
         id:
@@ -2797,8 +2909,10 @@ components:
         links:
           $ref: '#/components/schemas/Links'
         owner:
-          format: email
-          type: string
+          oneOf:
+            - format: email
+              type: string
+            - $ref: '#/components/schemas/UserMinimal'
         system:
           type: string
       required:
@@ -6027,6 +6141,421 @@ components:
           type: string
         wireless_effects:
           type: object
+      type: object
+    StartrekadventuresCharacter:
+      example:
+        name: 'Billy Bob Petrov'
+        assignment: 'Chief Medical Officer'
+        disciplines:
+          command: 2
+          conn: 2
+          engineering: 3
+          medicine: 5
+          science: 3
+          security: 1
+        environment: 'Busy Colony'
+        focuses:
+          - 'Infectious Disease'
+          - 'Virology'
+          - 'Xenobiology'
+          - 'Botany'
+          - 'Quantum Mechanics'
+          - 'Medical Sensors'
+        rank: 'Commander'
+        species:
+          name: 'Human'
+          description: |
+            Originating on the planet Earth in the Sol system, Humans are a
+            resilient, diverse, and adaptable species, who developed from
+            fractious, warring nations on the brink of mutual annihilation to a
+            united, peaceful society in less than a century, and managed to
+            forge alliances between former enemies within a century of achieving
+            interstellar space flight. Earth is a founder and pivotal member of
+            the United Federation of Planets, and many of the Federation’s
+            institutions can be found on Earth. Humans often exhibit a dichotomy
+            in their nature — being both driven to strong emotion and careful
+            reason — and while they have largely grown beyond their warlike and
+            divisive past, their drive and capacity for aggression are as much a
+            part of their success as their curiosity and analytical minds.
+        stats:
+          control: 9
+          daring: 7
+          fitness: 7
+          insight: 10
+          presence: 9
+          reason: 12
+        talents:
+          - name: 'Computer expertise'
+            description: |
+              Whenever you attempt a Task that involves the programming or study
+              of a computer system, you may add a bonus d20 to your pool.
+            id: 'computer-expertise'
+            page: 137
+            requirements:
+              science: 2
+            ruleset: 'core'
+        trait:
+          description: |
+            Humans are adaptable and resilient, and their resolve and ambition
+            often allow them to resist great hardship and triumph despite great
+            adversity. However, Humans can also be reckless and stubborn,
+            irrational, and unpredictable.
+          name: 'Human'
+          page: 107
+          ruleset: 'core'
+          id: 'Human'
+        upbringing: 'Agriculture or Rural'
+        values:
+          - 'Insatiable Curiosity'
+          - 'Exploring to Test New Theories'
+          - 'Threw Out The Handbook and Wrote My Own'
+          - 'Body and Mind Alike Must Be Healthy'
+        id: '5ecab94af4d90c95236cd77b'
+        owner: 'omni@digitaldarkness.com'
+        system: 'startrekadventures'
+        links:
+          self: 'https://commlink-dev.digitaldarkness.com/api/startrekadventures/characters/5ecab94af4d90c95236cd77b'
+      allOf:
+        - $ref: '#/components/schemas/Character'
+        - properties:
+            assignment:
+              type: string
+            disciplines:
+              properties:
+                command:
+                  type: integer
+                conn:
+                  type: integer
+                engineering:
+                  type: integer
+                medicine:
+                  type: integer
+                science:
+                  type: integer
+                security:
+                  type: integer
+              required:
+                - command
+                - conn
+                - engineering
+                - medicine
+                - science
+                - security
+              type: object
+            environment:
+              type: string
+            focuses:
+              items:
+                type: string
+              type: array
+            name:
+              type: string
+            rank:
+              type: string
+            species:
+              $ref: '#/components/schemas/StartrekadventuresSpecies'
+            stats:
+              properties:
+                control:
+                  type: integer
+                daring:
+                  type: integer
+                fitness:
+                  type: integer
+                insight:
+                  type: integer
+                presence:
+                  type: integer
+                reason:
+                  type: integer
+              required:
+                - control
+                - daring
+                - fitness
+                - insight
+                - presence
+                - reason
+              type: object
+            talents:
+              items:
+                $ref: '#/components/schemas/StartrekadventuresTalent'
+              type: array
+            traits:
+              items:
+                $ref: '#/components/schemas/StartrekadventuresTrait'
+              type: array
+            upbringing:
+              type: string
+            values:
+              items:
+                type: string
+              type: array
+          type: object
+    StartrekadventuresSpecies:
+      example:
+        name: 'Human'
+        description: |
+          Originating on the planet Earth in the Sol system, Humans are a
+          resilient, diverse, and adaptable species, who developed from
+          fractious, warring nations on the brink of mutual annihilation to a
+          united, peaceful society in less than a century, and managed to forge
+          alliances between former enemies within a century of achieving
+          interstellar space flight. Earth is a founder and pivotal member of
+          the United Federation of Planets, and many of the Federation’s
+          institutions can be found on Earth. Humans often exhibit a dichotomy
+          in their nature — being both driven to strong emotion and careful
+          reason — and while they have largely grown beyond their warlike and
+          divisive past, their drive and capacity for aggression are as much a
+          part of their success as their curiosity and analytical minds.
+      properties:
+        description:
+          type: string
+        name:
+          type: string
+      required:
+        - name
+      type: object
+    StartrekadventuresTalent:
+      example:
+        name: 'Computer expertise'
+        description: |
+          Whenever you attempt a Task that involves the programming or study of
+          a computer system, you may add a bonus d20 to your pool.
+        id: 'computer-expertise'
+        page: 137
+        requirements:
+          science: 2
+        ruleset: 'core'
+      properties:
+        description:
+          type: string
+        id:
+          type: string
+        name:
+          type: string
+        page:
+          type: integer
+        requirements:
+          type: object
+        ruleset:
+          type: string
+      required:
+        - id
+        - name
+        - page
+        - ruleset
+      type: object
+    StartrekadventuresTrait:
+      example:
+        description: |
+          Humans are adaptable and resilient, and their resolve and ambition
+          often allow them to resist great hardship and triumph despite great
+          adversity. However, Humans can also be reckless and stubborn,
+          irrational, and unpredictable.
+        name: 'Human'
+        page: 107
+        ruleset: 'core'
+        id: 'Human'
+      properties:
+        description:
+          type: string
+        id:
+          type: string
+        name:
+          type: string
+        page:
+          type: integer
+        ruleset:
+          type: string
+      required:
+        - id
+        - name
+        - page
+        - ruleset
+      type: object
+    TransformersCharacter:
+      example:
+        name: 'Bumblebee'
+        allegiance: 'Autobots'
+        alt_mode: null
+        color_primary: 'Yellow'
+        color_secondary: 'Black'
+        courage_alt: null
+        courage_robot: 5
+        endurance_alt: null
+        endurance_robot: 3
+        energon_base: 20
+        energon_current: 20
+        firepower_alt: null
+        firepower_robot: 7
+        hp_base: 13
+        hp_current: 13
+        intelligence_alt: null
+        intelligence_robot: 10
+        mode: 'robot'
+        programming: 'engineer'
+        quote: 'Bzzt'
+        rank_alt: null
+        rank_robot: 3
+        size: 3
+        skill_alt: null
+        skill_robot: 7
+        speed_alt: null
+        speed_robot: 8
+        strength_alt: null
+        strength_robot: 4
+        subgroups:
+          - name: 'Actionmaster'
+            class: 'standard'
+            cost: 2
+            description: |
+              Nuclean fuel pumps through the Transformer’s veins, preventing
+              Transformation, but granting Damage Reduction of 1d6 / 2 rounded
+              up. See Partner Units for more options with Actionmaster.
+        weapons:
+          - name: 'Buzzsaw'
+            class: 'minor'
+            cost: 1
+            damage: '1d6 vs. HP + 2x Map + Radius'
+            explanation: 'Melee range. Hand-replacement. Can also be Chainsaw.'
+            id: 'buzzsaw'
+        id: '668462afeeb2453f6f07eccc'
+        owner:
+          id: 3
+          name: 'Omni Adams'
+        system: 'transformers'
+      allOf:
+        - $ref: '#/components/schemas/Character'
+        - properties:
+            allegiance:
+              enum:
+                - Autobots
+                - Decepticons
+              type: string
+            alt_mode:
+              nullable: true
+              type: string
+            color_primary:
+              type: string
+            color_secondary:
+              type: string
+            courage_alt:
+              nullable: true
+              type: integer
+            courage_robot:
+              type: integer
+            endurance_alt:
+              nullable: true
+              type: integer
+            endurance_robot:
+              type: integer
+            energon_base:
+              type: integer
+            energon_current:
+              type: integer
+            firepower_alt:
+              nullable: true
+              type: integer
+            firepower_robot:
+              type: integer
+            hp_base:
+              type: integer
+            hp_current:
+              type: integer
+            intelligence_alt:
+              nullable: true
+              type: integer
+            intelligence_robot:
+              type: integer
+            mode:
+              type: string
+            name:
+              type: string
+            programming:
+              type: string
+            quote:
+              type: string
+            rank_alt:
+              nullable: true
+              type: integer
+            rank_robot:
+              type: integer
+            size:
+              type: integer
+            skill_alt:
+              nullable: true
+              type: integer
+            skill_robot:
+              type: integer
+            speed_alt:
+              nullable: true
+              type: integer
+            speed_robot:
+              type: integer
+            strength_alt:
+              nullable: true
+              type: integer
+            strength_robot:
+              type: integer
+            subgroups:
+              items:
+                $ref: '#/components/schemas/TransformersSubgroup'
+              type: array
+            weapons:
+              items:
+                $ref: '#/components/schemas/TransformersWeapon'
+              type: array
+          type: object
+    TransformersSubgroup:
+      example:
+        name: 'Actionmaster'
+        class: 'standard'
+        cost: 2
+        description: |
+          Nuclean fuel pumps through the Transformer’s veins, preventing
+          Transformation, but granting Damage Reduction of 1d6 / 2 rounded up.
+          See Partner Units for more options with Actionmaster.
+      properties:
+        class:
+          type: string
+        cost:
+          type: integer
+        description:
+          type: string
+        name:
+          type: string
+      required:
+        - class
+        - cost
+        - name
+      type: object
+    TransformersWeapon:
+      example:
+        name: 'Buzzsaw'
+        class: 'minor'
+        cost: 1
+        damage: '1d6 vs. HP + 2x Map + Radius'
+        explanation: 'Melee range. Hand-replacement. Can also be Chainsaw.'
+        id: 'buzzsaw'
+      properties:
+        class:
+          type: string
+        cost:
+          type: integer
+        damage:
+          type: string
+        explanation:
+          type: string
+        id:
+          type: string
+        name:
+          type: string
+      required:
+        - class
+        - cost
+        - damage
+        - id
+        - name
       type: object
     User:
       properties:
