# routes/web.php
@@ -115,26 +115,6 @@ Route::middleware('auth')->group(function (): void {
                 [ShadowrunController::class, 'storeVitals'],
             )->name('create-vitals');
         });
-
-        Route::prefix('transformers')->name('transformers.')->group(function (): void {
-            Route::get(
-                'create/{step?}',
-                [TransformersController::class, 'create'],
-            )->name('create');
-
-            Route::post(
-                'create/base',
-                [TransformersController::class, 'createBase'],
-            )->name('create-base');
-            Route::post(
-                'create/statistics',
-                [TransformersController::class, 'createStatistics'],
-            )->name('create-statistics');
-            Route::post(
-                'create/function',
-                [TransformersController::class, 'createProgramming'],
-            )->name('create-programming');
-        });
     });
 
     Route::get('/dashboard', [DashboardController::class, 'show'])
